plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.springframework.cloud.contract' version '4.1.4'
	id 'maven-publish'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'
description = '선결제를 keep 하는 서비스입니다.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

// Spring Cloud 버전 관리
dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
	}
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.apache.httpcomponents.client5:httpclient5'
	implementation 'com.github.f4b6a3:uuid-creator:5.3.6'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// Spring Retry (Webhook 재시도 등)
	implementation 'org.springframework.retry:spring-retry'
	implementation 'org.springframework:spring-aspects'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.security:spring-security-oauth2-jose'

	implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'

	// JWT 라이브러리 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	// S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'


	// implementation 'org/springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	testImplementation 'com.h2database:h2:2.2.224'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Contract Testing
	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation "org.testcontainers:junit-jupiter:1.20.4"
	testImplementation "org.testcontainers:mysql:1.20.4"
	testImplementation "org.springframework.boot:spring-boot-testcontainers"


	// 프로메테우스 구현체 추가
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// Micrometer Tracing (분산 추적)
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'

}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs("-XX:+EnableDynamicAgentLoading")

	maxHeapSize = "1024m"

	maxParallelForks = 1
}

jar {
	enabled = false
}

// Contract Testing 설정
contracts {
	contractsDslDir = file("src/test/resources/contracts")
	baseClassForTests = "com.ssafy.keeping.contract.BaseContractTest"
	testFramework = "JUNIT5"
}

// Stub JAR를 로컬 Maven에 배포 (서버 필요 없음!)
publishing {
	publications {
		stubs(MavenPublication) {
			artifact verifierStubsJar
			groupId = 'com.ssafy'
			artifactId = 'keeping-monolith'
			version = '0.0.1-SNAPSHOT'
		}
	}
}